public/mobile/style.css
:root {
    --primary-200: rgb(0, 127, 0);
    --primary-300: rgb(0, 222, 0);
    --primary-400: rgb(0, 255, 0);
    --accent-900: rgb(16, 16, 16);
}

::selection {
    background-color: var(--primary-400);
    color: var(--accent-900);
}

* {
    box-sizing: border-box;
}

body {
    background-color: var(--accent-900);
}

body,
input,
button,
h1,
p,
a {
    color: var(--primary-400);
    font-weight: 400;
    font-family: 'Courier New', Courier, monospace;
    text-decoration: none;

    margin: 0;
}
a:hover {
    background-color: var(--primary-400);
    color: var(--accent-900);
}

.container {
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 80vh;
    padding: 1em;
    background-color: var(--accent-900);
    border-top: none;
}

.toolbar {
    padding: 0 1em;
    display: flex;
    align-items: center;

    width: 100vw;
    height: 10vh;

    background-color: var(--accent-900);
}

.toolbar.top {
    border-bottom: 1px dotted var(--primary-400);
}
.toolbar.bottom {
    border-top: 1px dotted var(--primary-400);
}

.toolbar > p {
    font-size: 5vh;
    height: 5vh;
}

input {
    flex: 1;
    background: transparent;
    border: transparent;
    outline: none;
    border-bottom: 1px solid var(--primary-400);
    transition: border-bottom 0.2s linear;
}

input:focus {
    border-bottom: 2px solid var(--primary-400);
    transition: border-bottom 0.2s linear;
}

button {
    font-size: 1em;
    background-color: var(--accent-900);
    border: 0;
    padding: 0;
}
button.submit {
    margin-left: 1em;
    width: 2em;
    height: 2em;
}

.chat {
    padding: 1em 0;
    word-wrap: break-word;
}
.chat::before,
.chat::after {
    padding: 0.5em 0.5em;
}
.chat.left {
    text-align: left;
}
.chat.left::before {
    content: "[" attr(username) "]:";
    border-left: 1px dotted var(--primary-400);
}
.chat.right {
    text-align: right;
    color: var(--primary-200);
}
.chat.right::after {
    content: ":[" attr(username) "]";
    color: var(--primary-400);
    border-right: 1px dotted var(--primary-400);
}

.room {
    padding: 0.5em;
    font-size: 1.125rem;
    word-break: break-all;
}
.room:hover {
    background-color: var(--primary-300);
    color: var(--accent-900);
}
.room.active {
    background-color: var(--primary-400);
    color: var(--accent-900);
}

.room::before {
    content: "~ "
}
.room.active::before {
    content: "# "
}
.room.alert::before {
    content: "! "
}
.room:hover::before {
    content: "> "
}

button:hover {
    background-color: #0F0;
    color: #0f0f0f;
    cursor: pointer;
}

#userManagerUsername {
    flex: 1;
    font-size: 1.2rem;
    padding-right: 1em;
    border-right: 1px dotted var(--primary-400);
}

#userManagerLogout {
    margin-left: 1em;
}

